# parcial_videojuegos

./: .gitignore  CMakeLists.txt  FACTORY_IMPLEMENTATION.md  FLUJO_JUEGO.md  INICIO-RAPIDO.md  MEJORAS_VELOCIDAD.md  Makefile  README.md  arena2  arena2.cpp  arena_isometrica  arena_isometrica.cpp  audio.py  build.sh  check-requirements.sh  diagrama_factory.puml  end  end.cpp  factory_explicit_example.cpp  html.html  juego3d.cpp  juegoroblox.cpp  main  menu  play.sh  play_game.sh  play_music.py  primeravista.cpp  stop_music.sh  test_halloween.sh
include/: GameEngine.h  GameObjects.h  LevelManager.h  Physics.h
src/: GameEngine.cpp  GameObjects.cpp  LevelManager.cpp  Physics.cpp  main.cpp
